--- a/config.json
+++ b/config.json
@@ -5,14 +5,14 @@
     "local_address": "127.0.0.1",
     "local_port": 1080,
 
-    "password": "m",
+    "password": "sT05d3CrdzuxgREU",
     "method": "aes-128-ctr",
-    "protocol": "auth_aes128_md5",
-    "protocol_param": "",
-    "obfs": "tls1.2_ticket_auth_compatible",
+    "protocol": "auth_chain_a",
+    "protocol_param": "3",
+    "obfs": "http_simple",
     "obfs_param": "",
     "speed_limit_per_con": 0,
-    "speed_limit_per_user": 0,
+    "speed_limit_per_user": ssrspeed,
 
     "additional_ports" : {}, // only works under multi-user mode
     "additional_ports_only" : false, // only works under multi-user mode
