--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
     "password": "sT05d3CrdzuxgREU",
     "method": "aes-128-ctr",
     "protocol": "auth_chain_a",
-    "protocol_param": "3",
-    "obfs": "http_simple",
+    "protocol_param": "3#",
+    "obfs": "tls1.2_ticket_auth",
     "obfs_param": "",
     "speed_limit_per_con": 0,
     "speed_limit_per_user": ssrspeed,
